# pyproject.toml

[build-system]
requires      = ["setuptools>=44.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SCN"
version = "1.0.0"
description = "Structural Covariance Network pipeline"
readme = "README.md"
authors = [{ name = "Daniel Halls", email = "daniel.j.halls@kcl.ac.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Structural Covariance Networks", "SCN"]

dependencies = [
    'scona @ git+https://github.com/WhitakerLab/scona.git#egg=scona',
    'colorama',
    'matplotlib',
    'numpy',
    'pandas',
    'python-decouple',
    'seaborn',
    'terminaltables'
]
requires-python = ">=3.8"

[project.scripts]
scn = "SCN.__main__:main"
